# buoh

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.pre-0.8.3  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  buoh.doap  config.h.in  configure.ac  configure.in  default.nix  meson.build  meson_options.txt  shell.nix
build-aux/: check-comic-links.py  dist-news.py  post-install.py  ui-pre-validation.xsl
ci/: Dockerfile  build-image.sh  gitlab-ci.yaml
data/: .gitignore  Makefile.am  buoh-ui.xml  buoh.desktop.in  buoh.glade  buoh.schemas.in  comic_list.xsd  comics.xml  meson.build  org.gnome.buoh.appdata.xml.in  org.gnome.buoh.desktop.in  org.gnome.buoh.gresource.xml  org.gnome.buoh.gschema.xml
data/icons/: Makefile.am  meson.build
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/ui/: add-comic-dialog.ui  comic-list.ui  menus.ui  properties-dialog.ui  view-comic.ui  view-message.ui  view.ui  window.ui
docs/: buoh.toml.in  meson.build
docs/reference/buoh/: buoh-docs.xml.in  meson.build
help/: buho.dia  comics.txt
interfaces/: Makefile.am  buoh.glade
nix/: sources.json
pixmaps/: Makefile.am
po/: .gitignore  LINGUAS  POTFILES.in  be.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  fur.po  gl.po  hi.po  hu.po  id.po  it.po  ka.po  lv.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: .gitignore  Makefile.am  buoh-add-comic-dialog.c  buoh-add-comic-dialog.h  buoh-application.c  buoh-application.h  buoh-comic-cache.c  buoh-comic-cache.h  buoh-comic-list.c  buoh-comic-list.h  buoh-comic-loader.c  buoh-comic-loader.h  buoh-comic-manager-date.c  buoh-comic-manager-date.h  buoh-comic-manager.c  buoh-comic-manager.h  buoh-comic.c  buoh-comic.h  buoh-properties-dialog.c  buoh-properties-dialog.h  buoh-settings.h  buoh-view-comic.c  buoh-view-comic.h  buoh-view-message.c  buoh-view-message.h  buoh-view.c  buoh-view.h  buoh-window.c  buoh-window.h  buoh.c  buoh.h  buoh.vapi  callbacks.c  callbacks.h  comic-simple.c  comic-simple.h  comic.c  comic.h  main.c  main.vala  (+1 more)
