AC_PREREQ(2.52)
AC_INIT(buoh, 0.0.1)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

dnl Useful to call aclocal after 'make'
AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.11])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS
GNOME_MAINTAINER_MODE_DEFINES
GNOME_DEBUG_CHECK

AM_GLIB_GNU_GETTEXT

dnl ******************************************
dnl ** pkg-config dependacy checks          **
dnl ******************************************

GLIB_REQUIRED=2.7.0
LIBGNOMEUI_REQUIRED=2.6.0
GTK_REQUIRED=2.7.0
LIBSOUP_REQUIRED=2.2.0

PKG_CHECK_MODULES(BUOH, 
		  glib-2.0       >= $GLIB_REQUIRED
		  libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED 
		  gtk+-2.0       >= $GTK_REQUIRED 
		  libsoup-2.2    >= $LIBSOUP_REQUIRED) 
AC_SUBST(BUOH_CFLAGS)
AC_SUBST(BUOH_LIBS)

dnl
dnl Translations
dnl
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext package])
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

# Honor aclocal flags
  ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

  
if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps", [Pixmaps directory])
   pixmaps_dir="${ac_default_prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
else
   AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps", [Pixmaps directory])
   pixmaps_dir="${prefix}/$DATADIRNAME/${PACKAGE}/pixmaps"
fi

AC_SUBST(pixmaps_dir)
			
	   
if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(UI_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui", [Path where glade files will be installed])
   ui_dir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui"
else
   AC_DEFINE_UNQUOTED(UI_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/ui", [Path where glade files will be installed])
   ui_dir="${prefix}/${DATADIRNAME}/${PACKAGE}/ui"
fi

AC_SUBST(ui_dir)
			
if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(COMICS_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics", [Path where data files will be installed])
   comics_dir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics"
else
   AC_DEFINE_UNQUOTED(COMICS_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/comics", [Path where data files will be installed])
   comics_dir="${prefix}/${DATADIRNAME}/${PACKAGE}/comics"
fi

AC_SUBST(comics_dir)


	   
AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
data/Makefile
])
