AC_PREREQ(2.57)
AC_INIT([buoh], [0.8.3])
AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])

dnl Useful to call aclocal after 'make'
AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

IT_PROG_INTLTOOL([0.35.0])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS
GNOME_MAINTAINER_MODE_DEFINES
GNOME_DEBUG_CHECK

AM_GLIB_GNU_GETTEXT

dnl ******************************************
dnl ** pkg-config dependacy checks          **
dnl ******************************************

GLIB_REQUIRED=2.6.0
GTK_REQUIRED=2.6.0
LIBSOUP_REQUIRED=2.4.0
GCONF_REQUIRED=2.2.0

PKG_CHECK_MODULES(BUOH, 
		  glib-2.0       >= $GLIB_REQUIRED
		  gtk+-2.0       >= $GTK_REQUIRED 
		  libsoup-2.4    >= $LIBSOUP_REQUIRED
		  gconf-2.0      >= $GCONF_REQUIRED) 
AC_SUBST(BUOH_CFLAGS)
AC_SUBST(BUOH_LIBS)

AC_ARG_WITH(libgnomeui,
	    [AC_HELP_STRING([--with-libgnomeui], [Compile with print support [default=auto]])],
	    with_libgnomeui=$withval,
	    with_libgnomeui="auto")

LIBGNOMEUI_REQUIRED=2.6.0

PKG_CHECK_MODULES(LIBGNOMEUI, 
		  libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED,
		  have_libgnomeui=yes, have_libgnomeui=no)

enable_libgnomeui=no
if test x$have_libgnomeui = xyes; then
   if test x$with_libgnomeui = xyes -o x$with_libgnomeui = xauto; then
      AC_SUBST(LIBGNOMEUI_CFLAGS)
      AC_SUBST(LIBGNOMEUI_LIBS)
      AC_DEFINE([HAVE_LIBGNOMEUI],[1],[Enable GNOME UI.])
      enable_libgnomeui=yes
   fi
fi

AM_CONDITIONAL(HAVE_LIBGNOMEUI, test x$enable_libgnomeui = xyes)

AM_GCONF_SOURCE_2

AC_PATH_PROG([GCONFTOOL], [gconftool-2], [no])
if test "x$GCONFTOOL" = "xno"; then
        AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi

dnl
dnl Translations
dnl
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext package])
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

# Honor aclocal flags
  ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

  
if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(UI_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui", [Path where glade files will be installed])
   ui_dir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/ui"
else
   AC_DEFINE_UNQUOTED(UI_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/ui", [Path where glade files will be installed])
   ui_dir="${prefix}/${DATADIRNAME}/${PACKAGE}/ui"
fi

AC_SUBST(ui_dir)
			
if test "x${prefix}" = "xNONE"; then
   AC_DEFINE_UNQUOTED(COMICS_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics", [Path where data files will be installed])
   comics_dir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/comics"
else
   AC_DEFINE_UNQUOTED(COMICS_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/comics", [Path where data files will be installed])
   comics_dir="${prefix}/${DATADIRNAME}/${PACKAGE}/comics"
fi

AC_SUBST(comics_dir)


	   
AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
data/Makefile
data/icons/Makefile
data/icons/16x16/Makefile
data/icons/64x64/Makefile
])
